Renaming NL-SR (Dutch Suriname) to just NL.
- NL-SR is not (at this time) available in zope.i18n data.
  - This fixes issues with picking up of NL translations

--- a/bungeni_custom/trunk/translations/bungeni/nl/LC_MESSAGES/bungeni.po
+++ b/bungeni_custom/trunk/translations/bungeni/nl/LC_MESSAGES/bungeni.po
@@ -22,9 +22,9 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: zope/app/locales/extract.py\n"
-"Language: nl_SR\n"
-"Language-Code: nl_SR\n"
-"Language-Name: Nederlands(Suriname)\n"
+"Language: nl\n"
+"Language-Code: nl\n"
+"Language-Name: Nederlands\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 #: src/bungeni.main/bungeni/core/app.py:100
