Syncing NL-SR submissions into NL message catalog.
Submissions by Rehuel to NL-SR catalog on translate.bungeni.org.

--- a/bungeni_custom/trunk/translations/bungeni/nl/LC_MESSAGES/bungeni.po
+++ b/bungeni_custom/trunk/translations/bungeni/nl/LC_MESSAGES/bungeni.po
@@ -15,17 +15,18 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Development/Unknown\n"
 "POT-Creation-Date: Fri Nov 25 16:53:38 2011\n"
-"PO-Revision-Date: 2011-11-25 17:02+0300\n"
-"Last-Translator: undesa\n"
+"PO-Revision-Date: 2012-02-08 12:39+0300\n"
+"Last-Translator: Rehuel Lobato de Mesquita <bungeni.translator@gmail.com>\n"
 "Language-Team: Bungeni Translators\n"
+"Language: nl\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"X-Generator: Pootle 2.0.4\n"
 "Generated-By: zope/app/locales/extract.py\n"
-"Language: nl\n"
 "Language-Code: nl\n"
 "Language-Name: Nederlands\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 #: src/bungeni.main/bungeni/core/app.py:100
 msgid "Bungeni"
@@ -35,12 +36,12 @@ msgstr "Bungeni"
 #: src/bungeni.main/bungeni/core/app.py:108
 #: src/bungeni.main/bungeni/core/app.py:196
 msgid "Current parliamentary activity"
-msgstr "De huidige parlementaire activiteit"
+msgstr "parlementaire activiteiten"
 
 #: src/bungeni.main/bungeni/core/app.py:107
 #: src/bungeni.main/bungeni/ui/menu.zcml:1358
 msgid "Workspace"
-msgstr "Werkruimte"
+msgstr "werkplek"
 
 #: src/bungeni.main/bungeni/core/app.py:114
 #: src/bungeni.main/bungeni/core/app.py:115
@@ -49,23 +50,23 @@ msgstr "documenten"
 
 #: src/bungeni.main/bungeni/core/app.py:121
 msgid "draft"
-msgstr "ontwerp"
+msgstr "concept"
 
 #: src/bungeni.main/bungeni/core/app.py:122
 msgid "draft documents"
-msgstr "ontwerp-documenten"
+msgstr "concept documenten"
 
 #: src/bungeni.main/bungeni/core/app.py:127
 msgid "inbox"
-msgstr "inbox"
+msgstr "postvak in"
 
 #: src/bungeni.main/bungeni/core/app.py:128
 msgid "incoming documents"
-msgstr "binnenkomende documenten"
+msgstr "inkomende documenten"
 
 #: src/bungeni.main/bungeni/core/app.py:133
 msgid "sent"
-msgstr "gestuurd"
+msgstr "verzonden"
 
 #: src/bungeni.main/bungeni/core/app.py:134
 msgid "sent documents"
@@ -85,7 +86,7 @@ msgstr "gearchiveerde documenten"
 #: src/bungeni.main/bungeni/ui/descriptor/descriptor.py:3315
 #: src/bungeni.main/bungeni/ui/viewlets/schedule.py:42
 msgid "Scheduling"
-msgstr "Planning"
+msgstr "Programmering"
 
 #: src/bungeni.main/bungeni/core/app.py:152
 #: src/bungeni.main/bungeni/core/app.py:203
@@ -93,11 +94,11 @@ msgstr "Planning"
 #: src/bungeni.main/bungeni/ui/rss.py:174
 #: src/bungeni.main/bungeni/ui/rss.py:175
 msgid "Committees"
-msgstr "Commissies"
+msgstr "commissies"
 
 #: src/bungeni.main/bungeni/core/app.py:154
 msgid "Committee schedules"
-msgstr "Comite&#39;s"
+msgstr "commissie roosters"
 
 #: src/bungeni.main/bungeni/core/app.py:158
 #: src/bungeni.main/bungeni/core/app.py:248
@@ -107,27 +108,27 @@ msgstr "Comite&#39;s"
 #: src/bungeni.main/bungeni/ui/rss.py:274
 #: src/bungeni.main/bungeni/ui/viewlets/templates/whatson.pt:23
 msgid "Sittings"
-msgstr "Vergaderingen"
+msgstr "vergaderingen"
 
 #: src/bungeni.main/bungeni/core/app.py:159
 msgid "Plenary Sittings"
-msgstr "Plenaire Vergaderingen"
+msgstr "Plenaire vergaderingen"
 
 #: src/bungeni.main/bungeni/core/app.py:166
 #: src/bungeni.main/bungeni/ui/menu.zcml:1380
 msgid "Business"
-msgstr "Bedrijf"
+msgstr "werkzaamheden"
 
 #: src/bungeni.main/bungeni/core/app.py:167
 msgid "Daily operations of the parliament"
-msgstr "Dagelijkse werking van het parlement"
+msgstr "dagelijkse activiteiten van het parlement"
 
 #: src/bungeni.main/bungeni/core/app.py:170
 #: src/bungeni.main/bungeni/ui/descriptor/descriptor.py:1420
 #: src/bungeni.main/bungeni/ui/forms/viewlets.py:509
 #: src/bungeni.main/bungeni/ui/menu.zcml:1386
 msgid "Members"
-msgstr "Leden"
+msgstr "leden"
 
 #: src/bungeni.main/bungeni/core/app.py:171
 msgid "Records of members of parliament"
@@ -137,7 +138,7 @@ msgstr "Registraties van de leden van het parlement"
 #: src/bungeni.main/bungeni/ui/menu.zcml:1392
 #: src/bungeni.main/bungeni/ui/templates/archive.pt:6
 msgid "Archive"
-msgstr "Archief"
+msgstr "archief"
 
 #: src/bungeni.main/bungeni/core/app.py:175
 msgid "Parliament records and documents"
@@ -146,20 +147,20 @@ msgstr "Europees Parlement records en documenten"
 #: src/bungeni.main/bungeni/core/app.py:186
 #: src/bungeni.main/bungeni/ui/menu.zcml:1398
 msgid "Administration"
-msgstr "Administratie"
+msgstr "administratie"
 
 #: src/bungeni.main/bungeni/core/app.py:187
 msgid "Manage bungeni settings"
-msgstr "Beheren bungeni instellingen"
+msgstr "bungeni instellingen beheren"
 
 #: src/bungeni.main/bungeni/core/app.py:195
 #: src/bungeni.main/bungeni/ui/viewlets/templates/whatson.pt:12
 msgid "What's on"
-msgstr "Wat is er op"
+msgstr "agenda"
 
 #: src/bungeni.main/bungeni/core/app.py:205
 msgid "View committees created by the current parliament"
-msgstr "Bekijk de commissies die door het huidige parlement"
+msgstr "bekijk commissies ingesteld door het huidig parlement"
 
 #: src/bungeni.main/bungeni/core/app.py:209
 #: src/bungeni.main/bungeni/ui/descriptor/descriptor.py:2444
@@ -170,11 +171,11 @@ msgstr "Bekijk de commissies die door het huidige parlement"
 #: src/bungeni.main/bungeni/ui/viewlets/templates/whatson.pt:65
 #: src/bungeni.main/bungeni/ui/viewlets/templates/whatson.pt:71
 msgid "Bills"
-msgstr "Biljetten"
+msgstr "ontwerpwetten"
 
 #: src/bungeni.main/bungeni/core/app.py:211
 msgid "View bills introduced in the current parliament"
-msgstr "Bekijk wissels aangebracht in de huidige parlement"
+msgstr "bekijk ontwerpwetten ingediend bij het huidig parlement"
 
 #: src/bungeni.main/bungeni/core/app.py:215
 #: src/bungeni.main/bungeni/ui/descriptor/descriptor.py:2563
@@ -185,11 +186,11 @@ msgstr "Bekijk wissels aangebracht in de huidige parlement"
 #: src/bungeni.main/bungeni/ui/viewlets/templates/whatson.pt:118
 #: src/bungeni.main/bungeni/ui/viewlets/templates/whatson.pt:125
 msgid "Questions"
-msgstr "Vragen"
+msgstr "vraagstukken"
 
 #: src/bungeni.main/bungeni/core/app.py:217
 msgid "View questions tabled in the current parliament"
-msgstr "Bekijk vragen ingediend in het huidige parlement"
+msgstr "bekijk vraagstukken ingediend bij het huidig parlement"
 
 #: src/bungeni.main/bungeni/core/app.py:221
 #: src/bungeni.main/bungeni/ui/descriptor/descriptor.py:2358
@@ -200,11 +201,11 @@ msgstr "Bekijk vragen ingediend in het huidige parlement"
 #: src/bungeni.main/bungeni/ui/viewlets/templates/whatson.pt:92
 #: src/bungeni.main/bungeni/ui/viewlets/templates/whatson.pt:98
 msgid "Motions"
-msgstr "Moties"
+msgstr "moties"
 
 #: src/bungeni.main/bungeni/core/app.py:223
 msgid "View motions moved in the current parliament"
-msgstr "Bekijk bewegingen verplaatst in de huidige parlement"
+msgstr "bekijk moties ingediend bij het huidig parlement"
 
 #: src/bungeni.main/bungeni/core/app.py:228
 #: src/bungeni.main/bungeni/ui/descriptor/descriptor.py:2754
@@ -214,11 +215,11 @@ msgstr "Bekijk bewegingen verplaatst in de huidige parlement"
 #: src/bungeni.main/bungeni/ui/viewlets/templates/whatson.pt:145
 #: src/bungeni.main/bungeni/ui/viewlets/templates/whatson.pt:151
 msgid "Tabled documents"
-msgstr "Ingediende documenten"
+msgstr "ingediende documenten"
 
 #: src/bungeni.main/bungeni/core/app.py:231
 msgid "View the documents tabled in the current parliament"
-msgstr "Bekijk de documenten ingediend in het huidige parlement"
+msgstr "bekijk de documenten ingediend bij het huidig parlement"
 
 #: src/bungeni.main/bungeni/core/app.py:236
 #: src/bungeni.main/bungeni/ui/descriptor/descriptor.py:2315
@@ -228,68 +229,68 @@ msgstr "Bekijk de documenten ingediend in het huidige parlement"
 #: src/bungeni.main/bungeni/ui/viewlets/templates/whatson.pt:171
 #: src/bungeni.main/bungeni/ui/viewlets/templates/whatson.pt:177
 msgid "Agenda items"
-msgstr "Agendapunten"
+msgstr "agendapunten"
 
 #: src/bungeni.main/bungeni/core/app.py:238
 msgid "View the agenda items of the current parliament"
-msgstr "Bekijk de agendapunten van het huidige parlement"
+msgstr "bekijk de agendapunten van het huidig parlement"
 
 #: src/bungeni.main/bungeni/core/app.py:249
 msgid "View the sittings of the current parliament"
-msgstr "Bekijk de vergaderingen van het huidige parlement"
+msgstr "bekijk de vergaderingen van het huidig parlement"
 
 #: src/bungeni.main/bungeni/core/app.py:254
 msgid "Publications"
-msgstr "Publicaties"
+msgstr "publicaties"
 
 #: src/bungeni.main/bungeni/core/app.py:257
 msgid "browse and download parliamentary publications"
-msgstr "bekijken en downloaden parlementaire publicaties"
+msgstr "bekijk en download parlementaire publicaties"
 
 #: src/bungeni.main/bungeni/core/app.py:264
 msgid "Current"
-msgstr "Stroom"
+msgstr "huidig"
 
 #: src/bungeni.main/bungeni/core/app.py:265
 msgid "View current parliament members (MPs)"
-msgstr "Bekijk huidige parlementsleden (Kamerleden)"
+msgstr "bekijk de huidige parlementsleden"
 
 #: src/bungeni.main/bungeni/core/app.py:271
 msgid "Political groups"
-msgstr "Fracties"
+msgstr "politieke fracties"
 
 #: src/bungeni.main/bungeni/core/app.py:272
 msgid "View current political groups"
-msgstr "Bekijk huidige fracties"
+msgstr "bekijk de huidige politieke fracties"
 
 #: src/bungeni.main/bungeni/core/app.py:276
 msgid "Browse archives"
-msgstr "Archieven doorbladeren"
+msgstr "blader door de archieven"
 
 #: src/bungeni.main/bungeni/core/app.py:277
 msgid "Browse records from the archive"
-msgstr "Blader door records uit het archief"
+msgstr "blader door gegevens uit de archieven"
 
 #: src/bungeni.main/bungeni/core/app.py:281
 msgid "Documents"
-msgstr "Documenten"
+msgstr "documenten"
 
 #: src/bungeni.main/bungeni/core/app.py:282
 msgid "Browse documents in the archive"
-msgstr "Grasduinen in het archief"
+msgstr "blader door documenten in het archief"
 
 #: src/bungeni.main/bungeni/core/app.py:336
 msgid "Content"
-msgstr "Inhoud"
+msgstr "inhoud"
 
 #: src/bungeni.main/bungeni/core/app.py:337
 msgid "browse bungeni content"
-msgstr "browse bungeni inhoud"
+msgstr "blader door bungeni inhoud"
 
 #: src/bungeni.main/bungeni/core/app.py:342
 #: src/bungeni.main/bungeni/ui/templates/admin-menu-viewlet.pt:13
 msgid "Settings"
-msgstr "Instellingen"
+msgstr "instellingen"
 
 #: src/bungeni.main/bungeni/core/app.py:343
 #: src/bungeni.main/bungeni/ui/menu.zcml:744
@@ -299,11 +300,11 @@ msgstr "instellingen"
 #: src/bungeni.main/bungeni/core/app.py:348
 #: src/bungeni.main/bungeni/ui/menu.zcml:751
 msgid "email settings"
-msgstr "e-mailinstellingen"
+msgstr "email instellingen"
 
 #: src/bungeni.main/bungeni/core/app.py:349
 msgid "manage email settings"
-msgstr "het beheer van e-mailinstellingen"
+msgstr "beheer email instellingen"
 
 #: src/bungeni.main/bungeni/core/app.py:354
 msgid "search index settings"
@@ -311,15 +312,15 @@ msgstr "zoekindex instellingen"
 
 #: src/bungeni.main/bungeni/core/app.py:355
 msgid "manage search index settings"
-msgstr "beheren search index instellingen"
+msgstr "beheer zoekindex instellingen"
 
 #: src/bungeni.main/bungeni/core/app.py:360
 msgid "registry settings"
-msgstr "registerinstellingen"
+msgstr "register instellingen"
 
 #: src/bungeni.main/bungeni/core/app.py:361
 msgid "manage registry settings"
-msgstr "het beheer van instellingen van het register"
+msgstr "beheer register instellingen"
 
 #: src/bungeni.main/bungeni/core/dc.py:120
 #: src/bungeni.main/bungeni/core/dc.py:147
@@ -328,12 +329,12 @@ msgstr "het beheer van instellingen van het register"
 #: src/bungeni.main/bungeni/ui/rss.py:392
 #: src/bungeni.main/bungeni/ui/rss.py:415
 msgid "Submitted by"
-msgstr "Ingezonden door"
+msgstr "ingediend door"
 
 #: src/bungeni.main/bungeni/core/dc.py:125
 #: src/bungeni.main/bungeni/ui/rss.py:396
 msgid "Approved on"
-msgstr "Goedgekeurd op"
+msgstr "goedgekeurd door"
 
 #: src/bungeni.main/bungeni/core/dc.py:150
 #: src/bungeni.main/bungeni/ui/rss.py:373
@@ -343,38 +344,38 @@ msgstr "gepubliceerd op"
 #: src/bungeni.main/bungeni/core/dc.py:175
 #: src/bungeni.main/bungeni/ui/rss.py:419
 msgid "notice given on"
-msgstr "opzegging op"
+msgstr "kennisgeving op"
 
 #: src/bungeni.main/bungeni/core/dc.py:187
 #: src/bungeni.main/bungeni/ui/rss.py:277
 msgid "Sitting:"
-msgstr "Zittend:"
+msgstr "vergadering:"
 
 #: src/bungeni.main/bungeni/core/dc.py:190
 #: src/bungeni.main/bungeni/core/dc.py:200
 #: src/bungeni.main/bungeni/ui/rss.py:280
 #: src/bungeni.main/bungeni/ui/rss.py:287
 msgid "to"
-msgstr "naar"
+msgstr "aan"
 
 #: src/bungeni.main/bungeni/core/dc.py:197
 #: src/bungeni.main/bungeni/ui/rss.py:284
 msgid "Sitting scheduled for"
-msgstr "Zitten gepland voor"
+msgstr "vergadering gepland voor"
 
 #. Default: "Sitting of ${group_name} @ ${sitting_venue}"
 #: src/bungeni.main/bungeni/core/dc.py:207
 msgid "verbose_sitting_title"
-msgstr "Vergadering van het ${group_name} @ ${sitting_venue}"
+msgstr "Vergadering van ${group_name} @ ${sitting_venue}"
 
 #: src/bungeni.main/bungeni/core/dc.py:221
 msgid "Item scheduling"
-msgstr "Item planning"
+msgstr "maak beschikbaar voor planning"
 
 #. Default: ""
 #: src/bungeni.main/bungeni/core/dc.py:228
 msgid "Scheduled for sitting ($start to $end)"
-msgstr "Gepland voor zitten ($start naar $end)"
+msgstr "gepland voor vergadering ($start tot $end)"
 
 #: src/bungeni.main/bungeni/core/dc.py:240
 msgid "translation"
@@ -382,21 +383,21 @@ msgstr "vertaling"
 
 #: src/bungeni.main/bungeni/core/dc.py:241
 msgid "Version"
-msgstr "Versie"
+msgstr "versie"
 
 #: src/bungeni.main/bungeni/core/dc.py:245
 msgid "Last modified"
-msgstr "Laatst gewijzigd"
+msgstr "laatst gewijzigd"
 
 #. Default: "Member of Parliament for ${constituency} (${member})"
 #: src/bungeni.main/bungeni/core/dc.py:302
 msgid "member_title_with_constituency"
-msgstr "Lid van het Parlement voor ${constituency} (${member})"
+msgstr "Parlementslid voor ${constituency} (${member})"
 
 #: src/bungeni.main/bungeni/core/dc.py:418
 #: src/bungeni.main/bungeni/ui/descriptor/descriptor.py:3338
 msgid "Discussion"
-msgstr "Discussie"
+msgstr "discussie"
 
 #: src/bungeni.main/bungeni/core/dc.py:446
 #: src/bungeni.main/bungeni/ui/descriptor/descriptor.py:1478
@@ -415,17 +416,17 @@ msgstr "$x"
 
 #: src/bungeni.main/bungeni/core/schedule.py:80
 msgid "Unknown user group"
-msgstr "Onbekende groep gebruikers"
+msgstr "onbekende gebruikersgroep"
 
 #. Default: "HTML fragment to OpenDocument format"
 #: src/bungeni.main/bungeni/core/transformation.py:189
 msgid "title_html_fragment_odf_transform"
-msgstr "HTML-fragment OpenDocument-formaat"
+msgstr "HTML fragment naar OpenDocument formaat"
 
 #. Default: ""
 #: src/bungeni.main/bungeni/core/version.py:112
 msgid "Reverted to previous version $version"
-msgstr "Teruggekeerd naar de vorige versie $version"
+msgstr "teruggedraaid naar vorige versie %s"
 
 #: src/bungeni.main/bungeni/core/workflows/permissions.zcml:101
 #: src/bungeni.main/bungeni/core/workflows/permissions.zcml:404
@@ -436,7 +437,7 @@ msgstr "Teruggekeerd naar de vorige versie $version"
 #: src/bungeni.main/bungeni/core/workflows/wfi18n.pt:311
 #: src/bungeni.main/bungeni/core/workflows/wfi18n.pt:375
 msgid "Resubmit"
-msgstr "Opnieuw"
+msgstr "opnieuw indienen bij griffier"
 
 #: src/bungeni.main/bungeni/core/workflows/permissions.zcml:104
 #: src/bungeni.main/bungeni/core/workflows/permissions.zcml:514
