--- a/wiki/Install_PreRequisites_Fabric.wiki
+++ b/wiki/Install_PreRequisites_Fabric.wiki
@@ -7,9 +7,8 @@
 = Pre-Requisites for Bungeni =
 
 The Bungeni Application system has the following pre-requisites :
- * User installed Python 2.6 / 2.5
- * User installed Python 2.4
- * SSL, Imaging, bz2 extensions for Python 2.4 & 2.6 (or 2.5)
+ * User installed Python 2.6 
+ * SSL, Imaging, bz2 extensions for Python 2.6
  * System libraries required for building  PostgreSQL from source
  * OpenOffice.org -- this is used for PDF conversion
 
